--- a/create_nearbyairport_table.ipynb
+++ b/create_nearbyairport_table.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7d6208e3-d010-428f-8203-a09e8cb70764",
    "metadata": {
     "editable": true,
@@ -54,7 +54,7 @@
        "'DataFrame sent to the MySQL table \"nearbyairport\"!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,6 +69,7 @@
     "    '''\n",
     "city_from_MySQL = from_MySQL(connection_string, query)\n",
     "NearbyAirport_df = get_NearbyAirports(city_from_MySQL)\n",
+    "NearbyAirport_df\n",
     "to_MySQL(NearbyAirport_df, connection_string, 'nearbyairport')"
    ]
   }
